@@ -5,7 +5,7 @@
  * @package
  * @since 0.1
  * @author Charlie Powell <charlie@eval.bz>
- * @copyright Copyright (C) 2009-2013  Charlie Powell
+ * @copyright Copyright (C) 2009-2014  Charlie Powell
  * @license GNU Affero General Public License v3 <http://www.gnu.org/licenses/agpl-3.0.txt>
  *
  * This program is free software: you can redistribute it and/or modify
