@@ -1,3 +1,8 @@
+TinyMCE 4.0.1~core5
+
+	* Bump copyright date to 2014.
+	-- Charlie Powell <charlie@eval.bz>  Thu, 02 Jan 2014 11:24:47 -0500
+
 TinyMCE 4.0.1~core4
 
 	* Update the copyright datestamp to the current year.
